Actualización de test
- Se agregó un método de prueba para el test.
- Se agregó el archivo de propiedades del test.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=desarrollo
 #SSL
-server.ssl.enabled=true
+server.ssl.enabled=false
 #descripción
 application-description=@project.description@
 application-version=@project.version@
